--- a/views/post.ejs
+++ b/views/post.ejs
@@ -6,42 +6,107 @@
   content %>
 </p>
 <hr />
+<h3>Comments</h3>
 <div class="comments">
-  <h3>Comments</h3>
+  <% if(comments.length>0) { %> <% comments.forEach(comment => { %>
 
-  <% comments.forEach(comment => { %>
   <div class="card">
     <div class="card-header">
-      <span><%=comment.user%></span> said:
+      <span class="comment-username"><%=comment.user%></span>
+      said:
+
       <span class="comment-date"><%=comment.date.toLocaleString() %></span>
     </div>
     <div class="card-body">
-      <p class="card-text"><%=comment.content%></p>
+      <p class="card-text comment-content"><%=comment.content%></p>
     </div>
   </div>
-  <%});%>
+  <%});} else { %>
+  <p>No comments yet.</p>
+  <% }%>
+<!-- 
+  <hr /> -->
 
-  <hr />
-  <form method="post" action="/comment">
-    <h4>Leave your comment here</h4>
-    <div class="form-group">
-      <label for="userName">Your name:</label>
-      <input id="userName" class="form-control" type="text" name="userName" />
-    </div>
+  <p>
+    <a
+      id="commentToggler"
+      class="btn btn-outline-secondary"
+      data-toggle="collapse"
+      href="#commentForm"
+      role="button"
+      aria-expanded="false"
+      aria-controls="collapseExample"
+      onclick="updateClass()"
+      title="Add a comment"
+    >
+      +
+    </a>
+  </p>
+  <div id="commentForm" class="collapse">
+    <form method="post" action="/comment" class="needs-validation" novalidate>
+      <div class="form-group">
+        <label for="userName">Your name:</label>
+        <input id="userName" class="form-control" type="text" name="userName" required />
+        <div class="invalid-feedback">
+          Name is required.
+        </div>
+      </div>
 
-    <div class="form-group">
-      <label for="userEmail">Your email:</label>
-      <input id="userEmail" class="form-control" type="email" name="userEmail" />
-    </div>
+      <div class="form-group">
+        <label for="userEmail">Your email:</label>
+        <input
+          id="userEmail"
+          class="form-control"
+          type="email"
+          name="userEmail"
+          required
+        />
+        <div class="invalid-feedback">Email is required.</div>
+      </div>
 
-    <div class="form-group">
-      <label for="comment">Your message:</label>
-      <textarea id="comment" class="form-control" name="comment" cols="80" rows="5"></textarea>
-    </div>
+      <div class="form-group">
+        <label for="comment">Your message:</label>
+        <textarea
+          id="comment"
+          class="form-control"
+          name="comment"
+          cols="80"
+          rows="5"
+          required
+        ></textarea>
+      </div>
+      <div class="invalid-feedback">Message is required.</div>
 
-    <input type="hidden" name="postId" value="<%=id%>" />
-    <button class="btn btn-primary" type="submit">Post</button>
-  </form>
+      <input type="hidden" name="postId" value="<%=id%>" />
+      <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+  </div>
 </div>
 
+
+<script>
+  // Disable form submissions if there are invalid fields
+  (function() {
+    'use strict';
+    window.addEventListener('load', function() {
+      // Get the forms we want to add validation styles to
+      var forms = document.getElementsByClassName('needs-validation');
+      // Loop over them and prevent submission
+      var validation = Array.prototype.filter.call(forms, function(form) {
+        form.addEventListener('submit', function(event) {
+          if (form.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+          }
+          form.classList.add('was-validated');
+        }, false);
+      });
+    }, false);
+  })();
+
+  function updateClass() {
+    document.getElementById("commentToggler").classList.toggle("active");
+  }
+  </script>
+  
 <%- include("partials/footer"); -%>
