fixed the dropdown menu

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,8 @@
     required
   />
 
+  <div style="height: 10px;"></div>
+
   <button class="btn btn-lg btn-primary btn-block" type="submit">
     Login
   </button>
