--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,12 +29,17 @@ h1 {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signin input[name="email"], .form-signin input[name="password"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
+.form-signin input[name="username"] {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-signin input[name="password-confirm"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -65,6 +70,24 @@ h1 {
   color: #1abc9c !important;
 }
 
+.dropdown-menu {
+  letter-spacing: normal;
+  color: #838484;
+}
+
+.dropdown-username {
+  padding: 0.25rem 1rem;
+  font-weight: bold;
+}
+
+.dropdown-email {
+  padding: 0.25rem 1rem;
+  font-size: 0.9rem;
+}
+
+.dropdown-item {
+  padding: 0.25rem 1rem;
+}
 
 .card {
   background-color: #fafafa;
