--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,6 +31,7 @@
 
   <input
     type="password"
+    name="password-confirm"
     class="form-control"
     placeholder="Confirm Password"
     required
