added flash messages for user feedback when logging in

--- a/views/errors/403.ejs
+++ b/views/errors/403.ejs
@@ -6,7 +6,7 @@
   </p>
   
   <p>
-    Please contact the websiite administrator.
+    Please contact the website administrator.
   </p>
   <a  href="mailto:admin@email.com">admin@email.com</a>
 </div>
