--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,14 +29,14 @@ h1 {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[name="email"], .form-signin input[name="password"] {
+.form-signin input[name="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[name="username"] {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+.form-signin input[name="username"], .form-signin input[name="password"] {
+  border-radius: 0;
+  margin-bottom: -1px
 }
 
 .form-signin input[name="password-confirm"] {
