--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,13 @@
 
 <form class="form-signin" method="post" action="/login">
   <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+
+  <% if(error.length > 0) { %>
+  <div class="alert alert-danger" role="alert">
+    <%=error%>
+  </div>
+  <% } %>
+
   <label class="sr-only">Email address</label>
   <input
     type="text"
