--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,7 +39,7 @@
   <!-- <div class="checkbox mb-3">
     <label> <input type="checkbox" value="remember-me" /> Remember me </label>
   </div> -->
-  <button class="btn btn-lg btn-primary btn-block" type="submit">
+  <button class="btn btn-lg btn-primary btn-block" type="submit" disabled title="Not available">
     Register
   </button>
 </form>
