added password validation to the register view (client side only)

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -20,7 +20,7 @@
       <span class="comment-username"><%=comment.user%></span>
       said:
 
-      <span class="comment-date"><%=comment.date.toLocaleString() %></span>
+      <span class="comment-date"><%=comment.date.toLocaleString("en-GB") %></span>
     </div>
     <div class="card-body">
       <p class="card-text comment-content"><%=comment.content%></p>
