--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,9 +3,21 @@ html {
   position: relative;
 }
 
+body {
+  text-align: justify;
+}
+
 h1 {
   margin-top: 1.5rem;
   margin-bottom: 1rem;
+}
+
+a {
+  color: #77AF9F;
+}
+
+a:hover {
+  color: #47695F
 }
 
 /* Register and Login */
